Add SVG favicon with AS branding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/og-image.jpg" />
 
+  <!-- Favicon: SVG preferred, with ICO fallback -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="/favicon.ico" />
+
     <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Genuine Auto Parts — Fast Delivery" />
     <meta name="twitter:description" content="OE quality auto parts for all Indian car brands. Same day dispatch." />
